--- a/frontend/src/app/pages/register-user/register-user.component.html
+++ b/frontend/src/app/pages/register-user/register-user.component.html
@@ -1,1 +1,32 @@
-<p>register-user works!</p>
+<div class="shadow p-3 mb-5 bg-white rounded border-dark" style=" margin-left: 35%; width: 30%;margin-top: 10%;">
+  <div class="card border-success">
+    <div class="card-body">
+      <h5 class="card-title text-center">Register</h5>
+      <form [formGroup]="registerForm">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Name</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" formControlName="name" [ngClass]="{'is-valid': !name.invalid, 'is-invalid':name.invalid}">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" formControlName="password" [ngClass]="{'is-valid': !password.invalid, 'is-invalid':password.invalid}">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Confirm Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" formControlName="cpassword" [ngClass]="{'is-valid': !cpassword.hasError('passwordNotMatching'), 'is-invalid':cpassword.hasError('passwordNotMatching')}">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Info</label>
+          <input type="password" class="form-control" id="exampleInputEmail1" formControlName="info" [ngClass]="{'is-valid': !info.invalid, 'is-invalid':info.invalid}">
+        </div>
+
+        <!-- <div class="form-group form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" formControlName="keepSession">
+          <label class="form-check-label" for="exampleCheck1" >Keep me logged in. </label>
+        </div> -->
+      </form>
+      <!-- <button class="card-link btn btn-secondary" (click)="login()">Login</button> -->
+      <button class="card-link btn btn-secondary" [disabled]="registerForm.invalid" (click)="register()">Register</button>
+    </div>
+  </div>
+</div>
