--- a/frontend/src/app/helpers/navbar/navbar.component.html
+++ b/frontend/src/app/helpers/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light mybg">
   <a class="navbar-brand" [routerLink]="[ '/']"><i class="fas fa-bread-slice"></i> &nbsp; Recipes</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
