--- a/frontend/src/app/pages/search-recipes/search-recipes.component.html
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.html
@@ -6,7 +6,8 @@
       <button class="btn btn-sm dropdown-toggle border border-dark rounded" style="background-color: transparent;"
         type="button" data-toggle="dropdown">{{ pagination.size }}</button>
       <div class="dropdown-menu">
-        <a class="dropdown-item" *ngFor="let size of sizes" (click)="changeSize(size)">{{ size }}</a>
+        <a class="dropdown-item" *ngFor="let size of sizes" (click)="changeSize(size)"><span
+            style="cursor: pointer;">{{ size }}</span></a>
       </div>
     </div>
     &nbsp;of {{ quantity }} elements.
@@ -20,6 +21,30 @@
   <div class="col-1"></div>
 </div>
 <br>
+
+
+<div class="container shadow-lg rounded mb-3" style="border: 1px black solid;">
+  <div class="row thead text-center">
+    <div class="col-md-1 py-3"></div>
+    <div class="col-md-2 py-3">Name</div>
+    <div class="col-md-7 py-3">Description</div>
+    <div class="col-md-2 py-3">
+      Go to recipe
+    </div>
+  </div>
+  <div class="row tbody py-2" *ngFor="let item of showdata[pagination.page]; let i=index">
+    <div class="col-md-1 py-3 border-right"><img src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt=""></div>
+    <div class="col-md-2 text-center center border-right border-secondary"><span class="">{{item.name}}</span></div>
+    <div class="col-md-7 pt-2 pl-5 text-truncate center border-right border-secondary"  >{{item.description}}</div>
+    <div class="col-md-2 py-3 text-center center">
+      <button (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
+    </div>
+  </div>
+</div>
+
+
+
+
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item" [ngClass]="{'disabled': pagination.page === 0}"><a class="page-link" tabindex="-1"
