--- a/frontend/src/app/pages/search-recipes/search-recipes.component.html
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.html
@@ -32,11 +32,11 @@
       Go to recipe
     </div>
   </div>
-  <div class="row tbody py-2" *ngFor="let item of showdata[pagination.page]; let i=index">
-    <div class="col-md-1 py-3 border-right"><img src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt=""></div>
-    <div class="col-md-2 text-center center border-right border-secondary"><span class="">{{item.name}}</span></div>
-    <div class="col-md-7 pt-2 pl-5 text-truncate center border-right border-secondary"  >{{item.description}}</div>
-    <div class="col-md-2 py-3 text-center center">
+  <div class="row tbody " *ngFor="let item of showdata[pagination.page]; let i=index">
+    <div class="col-1 py-1 border-right"><img src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt=""></div>
+    <div class="col-2 text-center center border-right border-secondary"><span class="">{{item.name}}</span></div>
+    <div class="col-7  pl-5 text-truncate center border-right border-secondary"  >{{item.description}}</div>
+    <div class="col-2  text-center center">
       <button (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
     </div>
   </div>
