--- a/frontend/src/app/pages/search-recipes/search-recipes.component.css
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.css
@@ -2,3 +2,27 @@
   width: 50%;
   padding: 10px;
 }
+.thead {
+  background-color: rgb(51, 51, 51);
+  color: white;
+  font-size: large;
+}
+.tbody {
+  background-color: rgba(250, 250, 250, 0.3);
+  font-size: large;
+  border-top: 1px solid rgb(51, 51, 51);
+}
+.row.tbody:hover {
+  background-color: rgba(250, 250, 250, 0.7);
+}
+.search-tag {
+  background-color: rgb(51, 51, 51);
+  color: white;
+  font-size: large;
+}
+
+.search-box {
+  background-color: rgba(250, 250, 250, 0.3);
+  font-size: large;
+  /* border-top: 1px solid rgb(51, 51, 51); */
+}
