--- a/frontend/src/app/pages/search-recipes/search-recipes.component.html
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.html
@@ -13,9 +13,9 @@
     &nbsp;of {{ quantity }} elements.
   </div>
   <div class="col-4"></div>
-  <div class="col-1 search-tag text-center rounded-left p-1">Search</div>
-  <div class="col-2 search-box border border-dark rounded-right">
-    <input type="text" [(ngModel)]="searchText" class="form-control bg-transparent border-0 ar"
+  <div class="col-1 search-tag text-center rounded-left center">Search</div>
+  <div class="col-2 search-box border border-dark rounded-right p-0">
+    <input type="text" [(ngModel)]="searchText" class="my-1 form-control bg-transparent border-0 ar"
       (ngModelChange)='search($event)' placeholder="&#xF002;" style="font-family:Arial, FontAwesome">
   </div>
   <div class="col-1"></div>
@@ -25,19 +25,17 @@
 
 <div class="container shadow-lg rounded mb-3" style="border: 1px black solid;">
   <div class="row thead text-center">
-    <div class="col-md-1 py-3"></div>
-    <div class="col-md-2 py-3">Name</div>
-    <div class="col-md-7 py-3">Description</div>
-    <div class="col-md-2 py-3">
-      Go to recipe
-    </div>
+    <!-- <div class="col-md-1 py-3 border-bottom border-right border-dark"></div> -->
+    <div class="col-md-3 py-3 border-bottom border-right border-dark">Name</div>
+    <div class="col-md-7 py-3 border-bottom border-right border-dark">Description</div>
+    <div class="col-md-2 py-3 border-bottom border-dark">Go to recipe</div>
   </div>
-  <div class="row tbody " *ngFor="let item of showdata[pagination.page]; let i=index">
-    <div class="col-1 py-1 border-right"><img src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt=""></div>
-    <div class="col-2 text-center center border-right border-secondary"><span class="">{{item.name}}</span></div>
-    <div class="col-7  pl-5 text-truncate center border-right border-secondary"  >{{item.description}}</div>
-    <div class="col-2  text-center center">
-      <button (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
+  <div class="row" *ngFor="let item of showdata[pagination.page]; let i=index">
+    <div class="col-1 py-1 border-right"><img class="rounded-lg" src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt=""></div>
+    <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
+    <div class="col-7  pl-5 text-truncate center border-right border-dark"  >{{item.description}}</div>
+    <div class="col-2  text-center center"> 
+      <button class="btn btn-outline-dark" (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
     </div>
   </div>
 </div>
