--- a/frontend/src/app/pages/view-recipe/view-recipe.component.html
+++ b/frontend/src/app/pages/view-recipe/view-recipe.component.html
@@ -31,7 +31,7 @@
         <p class="text-justify pl-2">{{recipe.description}}</p>
       </div>
       <div class="col-6 text-center pt-4">
-        <img src="{{imagesUrl+recipe.picture}}" class="rounded mx-auto d-block">      
+        <img src="{{imagesUrl+recipe.picture}}"width="100%" height="100%" alt="" class="rounded mx-auto d-block">      
       </div>
     </div>
     <hr style="border-color: darkgrey;">
@@ -42,8 +42,17 @@
       </div>
       <div class="w-100"></div>
       <div class="col" >
-        <ul class="mt-2 pl-8" *ngFor="let item of recipe.ingredients">
-          <li>{{item.quantity}}&nbsp;{{item.name}}</li>
+        <ul class="mt-2 list-group">
+          <li class="list-group-item bg-transparent border-0" *ngFor="let item of recipe.ingredients">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <div class="bg-transparent border-0 input-group-text">
+                  <input type="checkbox">
+                </div>
+              </div>
+              <input type="text" class="form-control bg-transparent text-body border-0" style="" readonly value="{{item.quantity + ' ' + item.name}}">
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -54,7 +63,7 @@
       </div>
       <div class="w-100"></div>
       <div class="row pl-4">
-        <p class="mt-2 pl-4 text-justify">{{recipe.steps}}</p>
+        <p class="mt-2 pl-4 text-justify" style="white-space: pre-line;">{{recipe.steps}}</p>
       </div>
     </div>
   </ng-container>
