--- a/frontend/src/app/pages/search-users/search-users.component.html
+++ b/frontend/src/app/pages/search-users/search-users.component.html
@@ -1,1 +1,56 @@
-<p>search-users works!</p>
+<div class="row">
+  <div class="col-1"></div>
+  <div class="col-3">
+    Showing &nbsp;
+    <div class="btn-group">
+      <button class="btn btn-sm dropdown-toggle border border-dark rounded" style="background-color: transparent;"
+        type="button" data-toggle="dropdown">{{ pagination.size }}</button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" *ngFor="let size of sizes" (click)="changeSize(size)"><span
+            style="cursor: pointer;">{{ size }}</span></a>
+      </div>
+    </div>
+    &nbsp;of {{ quantity }} elements.
+  </div>
+  <div class="col-4"></div>
+  <div class="col-1 search-tag text-center rounded-left center">Search</div>
+  <div class="col-2 search-box border border-dark rounded-right p-0">
+    <input type="text" [(ngModel)]="searchText" class="my-1 form-control bg-transparent border-0 ar"
+      (ngModelChange)='search($event)' placeholder="&#xF002;" style="font-family:Arial, FontAwesome">
+  </div>
+  <div class="col-1"></div>
+</div>
+<br>
+
+
+<div class="row mycenter">
+  <div class="col-3 card border border-success" *ngFor="let item of showdata[pagination.page]; let i=index">
+    <h5 class="card-title text-center text-uppercase mt-4 mb-0">{{item.name}}</h5>
+    <div class="card-body">
+      <div class="text-center mycenter px-4 py-2">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/1200px-User_icon_2.svg.png"
+          width="100%" height="100%" class="rounded-circle border border-secondary">
+      </div>
+      <p class="card-text">{{item.info}}</p>
+      <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+    </div>
+    <div class="card-footer bg-transparent text-center">
+      <button class="btn btn-secondary" (click)="profile(item._id)">View Profile</button>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item" [ngClass]="{'disabled': pagination.page === 0}"><a class="page-link" tabindex="-1"
+        (click)="changePage(false)"><span aria-hidden="true"><i class="fas fa-angle-double-left"></i></span></a></li>
+    <li class="page-item"><a class="page-link">{{ pagination.page + 1 }} of {{ showdata.length }}</a></li>
+    <li class="page-item" [ngClass]="{'disabled': pagination.page >= showdata.length - 1}"><a class="page-link"
+        (click)="changePage(true)"><span aria-hidden="true"><i class="fas fa-angle-double-right"></i></span></a></li>
+  </ul>
+</nav>
