--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -1,1 +1,71 @@
-<p>profile works!</p>
+<div class="container">
+  <div class="row m-2">
+    <h1>{{user.name}}</h1>
+  </div>
+  <div class="row">
+    <div class="col m-2">
+      <img src="{{imagesUrl+user.image}}" width="100%" height="100%" alt="" class="rounded-circle">
+    </div>
+    <div class="col m-2">
+      <h3>My Networks</h3>
+      <ul class="list-group m-3">
+        <li class="list-group-item background-transparent" *ngFor="let item of user.networks">
+          {{item}}
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col m-2">
+      <h2>About Me</h2>
+    </div>
+    <div class="w-100"></div>
+    <div class="col m-3">
+      {{user.info}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col m-2">
+      <h2>My Recipes</h2>
+    </div>
+    <div class="w-100"></div>
+    <div class="col m-2">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-2 search-tag text-center rounded-left center" style="height: 50px;">Search</div>
+        <div class="col-8 search-box border border-dark rounded-right p-0" style="height: 50px;">
+          <input type="text" [(ngModel)]="searchText" class="my-1 form-control bg-transparent border-0 ar"
+            (ngModelChange)='search($event)' placeholder="&#xF002;" style="font-family:Arial, FontAwesome">
+        </div>
+        <div class="col-1"></div>
+      </div>
+      <br>
+      <div class="container shadow-lg rounded mb-3" style="border: 1px black solid;">
+        <div class="row thead text-center">
+          <div class="col-md-3 py-3 border-bottom border-right border-dark">Name</div>
+          <div class="col-md-7 py-3 border-bottom border-right border-dark">Description</div>
+          <div class="col-md-2 py-3 border-bottom border-dark">Go to recipe</div>
+        </div>
+        <div class="row" *ngFor="let item of showdata[pagination.page]; let i=index">
+          <div class="col-1 py-1 border-right"><img class="rounded-lg" src="{{imagesUrl+item.picture}}" width="100%"
+              height="100%" alt=""></div>
+          <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
+          <div class="col-7 px-2 text-truncate center border-right border-dark">{{item.description}}</div>
+          <div class="col-2 text-center center">
+            <button class="btn btn-outline-dark" (click)="goToRecipe(item._id)"><i
+                class="fas fa-fighter-jet"></i></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [ngClass]="{'disabled': pagination.page === 0}"><a class="page-link" tabindex="-1"
+          (click)="changePage(false)"><span aria-hidden="true"><i class="fas fa-angle-double-left"></i></span></a></li>
+      <li class="page-item"><a class="page-link">{{ pagination.page + 1 }} of {{ showdata.length }}</a></li>
+      <li class="page-item" [ngClass]="{'disabled': pagination.page >= showdata.length - 1}"><a class="page-link"
+          (click)="changePage(true)"><span aria-hidden="true"><i class="fas fa-angle-double-right"></i></span></a></li>
+    </ul>
+  </nav>
+</div>
