--- a/frontend/src/app/pages/search-recipes/search-recipes.component.html
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.html
@@ -34,8 +34,8 @@
     <div class="col-1 py-1 border-right"><img class="rounded-lg" src="{{imagesUrl+item.picture}}" width="100%"
         height="100%" alt=""></div>
     <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
-    <div class="col-7  pl-5 text-truncate center border-right border-dark">{{item.description}}</div>
-    <div class="col-2  text-center center">
+    <div class="col-7 px-2 text-truncate center border-right border-dark">{{item.description}}</div>
+    <div class="col-2 text-center center">
       <button class="btn btn-outline-dark" (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
     </div>
   </div>
