--- a/frontend/src/app/pages/search-users/search-users.component.css
+++ b/frontend/src/app/pages/search-users/search-users.component.css
@@ -37,3 +37,13 @@
   display: flex;
   justify-content: center;
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
+}
+
+.module {
+  overflow: hidden;
+}
