--- a/frontend/src/app/pages/search-users/search-users.component.html
+++ b/frontend/src/app/pages/search-users/search-users.component.html
@@ -28,10 +28,9 @@
     <h5 class="card-title text-center text-uppercase mt-4 mb-0">{{item.name}}</h5>
     <div class="card-body">
       <div class="text-center mycenter px-4 py-2">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/1200px-User_icon_2.svg.png"
-          width="100%" height="100%" class="rounded-circle border border-secondary">
+        <img src="{{imagesUrl+item.image}}" width="100%" height="100%" alt="" class="rounded-circle">
       </div>
-      <p class="card-text">{{item.info}}</p>
+      <p class="card-text module line-clamp">{{item.info}}</p>
       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
     </div>
     <div class="card-footer bg-transparent text-center">
