--- a/frontend/src/app/pages/search-recipes/search-recipes.component.html
+++ b/frontend/src/app/pages/search-recipes/search-recipes.component.html
@@ -36,7 +36,7 @@
     <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
     <div class="col-7 px-2 text-truncate center border-right border-dark">{{item.description}}</div>
     <div class="col-2 text-center center">
-      <button class="btn btn-outline-dark" (click)="goToRecipe(item._id)"><i class="fas fa-fighter-jet"></i></button>
+      <button class="btn btn-dark" (click)="goToRecipe(item._id)"><i class="fas fa-chevron-circle-right"></i></button>
     </div>
   </div>
 </div>
