--- a/frontend/src/app/pages/search-users/search-users.component.html
+++ b/frontend/src/app/pages/search-users/search-users.component.html
@@ -13,8 +13,8 @@
     &nbsp;of {{ quantity }} elements.
   </div>
   <div class="col-4"></div>
-  <div class="col-1 search-tag text-center rounded-left center">Search</div>
-  <div class="col-2 search-box border border-dark rounded-right p-0">
+  <div class="col-1 search-tag text-center rounded-left center" style="height: 50px;">Search</div>
+  <div class="col-2 search-box border border-dark rounded-right p-0" style="height: 50px;">
     <input type="text" [(ngModel)]="searchText" class="my-1 form-control bg-transparent border-0 ar"
       (ngModelChange)='search($event)' placeholder="&#xF002;" style="font-family:Arial, FontAwesome">
   </div>
