--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -3,7 +3,7 @@
     <h1>{{user.name}}</h1>
   </div>
   <div class="row">
-    <div class="col m-2">
+    <div class="col m-5">
       <img src="{{imagesUrl+user.image}}" width="100%" height="100%" alt="" class="rounded-circle">
     </div>
     <div class="col m-2">
@@ -52,8 +52,8 @@
           <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
           <div class="col-7 px-2 text-truncate center border-right border-dark">{{item.description}}</div>
           <div class="col-2 text-center center">
-            <button class="btn btn-outline-dark" (click)="goToRecipe(item._id)"><i
-                class="fas fa-fighter-jet"></i></button>
+            <button class="btn btn-dark" (click)="goToRecipe(item._id)"><i
+                class="fas fa-chevron-circle-right"></i></button>
           </div>
         </div>
       </div>
