--- a/frontend/src/app/pages/view-recipe/view-recipe.component.html
+++ b/frontend/src/app/pages/view-recipe/view-recipe.component.html
@@ -31,7 +31,7 @@
         <p class="text-justify pl-2">{{recipe.description}}</p>
       </div>
       <div class="col-6 text-center pt-4">
-        <img src="{{imagesUrl+recipe.picture}}"width="100%" height="100%" alt="" class="rounded mx-auto d-block">      
+        <img src="{{imagesUrl+recipe.picture}}"width="430px" height="405px%" alt="" class="rounded mx-auto d-block">      
       </div>
     </div>
     <hr style="border-color: darkgrey;">
