--- a/frontend/src/app/helpers/navbar/navbar.component.html
+++ b/frontend/src/app/helpers/navbar/navbar.component.html
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light mybg">
-  <a class="navbar-brand" [routerLink]="[ '/']"><i class="fas fa-bread-slice"></i> &nbsp; Recipes</a>
+  <!-- <a class="navbar-brand" [routerLink]="[ '/']"><i class="fas fa-bread-slice"></i> &nbsp; Recipes</a> -->
+  <a class="navbar-brand" [routerLink]="[ '/']"> <img src="../../../assets/logo.png" alt="No" class="rounded-circle" style="height: auto; width: 10%;"> &nbsp; Rossipes</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <ng-container *ngIf="login; else elseTemplate">
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-md-auto">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="[ '/recipes']">Recipes</a>
         </li>
@@ -18,7 +19,7 @@
             aria-haspopup="true" aria-expanded="false">
             User name
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="[ '/profile', userid]">Account Settings</a>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
@@ -29,7 +30,7 @@
   </ng-container>
   <ng-template #elseTemplate>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-md-auto">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="[ '/recipes']">Recipes</a>
         </li>
@@ -40,6 +41,4 @@
       </ul>
     </div>  
   </ng-template>
-  
-  
 </nav>
