--- a/frontend/src/app/pages/main/main.component.html
+++ b/frontend/src/app/pages/main/main.component.html
@@ -1,1 +1,23 @@
-<p>main works!</p>
+<div class="container">
+  <div>
+    <img src="../../../assets/hfull.png" alt="" style="width: 100%;" class="rounded my-5">
+  </div>
+  <div>
+    <h1>Most Popular</h1>
+    <div class="row pl-4">
+      <div class="col-4 card bg-transparent stroke border border-dark" *ngFor="let item of showdata[pagination.page]; let i=index">
+        <img src="{{imagesUrl+item.picture}}" width="100%" height="100%" alt="" class="rounded card-img">
+        <div class="row card-img-overlay text-break text-lowercase font-weight-bold" style="width: 100%;">
+          <div class="col-10">
+            <p class="card-text text-capitalize">{{item.name}}</p>
+          </div>
+          <div class="col-2">
+            <div class="bg-transparent"> 
+              <button class="btn btn-dark border border-white" (click)="goToRecipe(item._id)"><i class="fas fa-arrow-right"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
