--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col m-5">
-      <img src="{{imagesUrl+user.image}}" width="100%" height="100%" alt="" class="rounded-circle">
+      <img src="{{imagesUrl+user.image}}" width="306px" height="306px" alt="" class="rounded-circle">
     </div>
     <div class="col m-2">
       <h3>My Networks</h3>
@@ -47,8 +47,8 @@
           <div class="col-md-2 py-3 border-bottom border-dark">Go to recipe</div>
         </div>
         <div class="row" *ngFor="let item of showdata[pagination.page]; let i=index">
-          <div class="col-1 py-1 border-right"><img class="rounded-lg" src="{{imagesUrl+item.picture}}" width="100%"
-              height="100%" alt=""></div>
+          <div class="col-1 py-1 border-right"><img class="rounded-lg" src="{{imagesUrl+item.picture}}" width="65px"
+              height="65px" alt=""></div>
           <div class="col-2 text-center center border-right border-dark"><span class="">{{item.name}}</span></div>
           <div class="col-7 px-2 text-truncate center border-right border-dark">{{item.description}}</div>
           <div class="col-2 text-center center">
