--- a/frontend/src/app/pages/search-users/search-users.component.html
+++ b/frontend/src/app/pages/search-users/search-users.component.html
@@ -27,7 +27,7 @@
   <div class="col-3 card border border-success" *ngFor="let item of showdata[pagination.page]; let i=index">
     <h5 class="card-title text-center text-uppercase mt-4 mb-0">{{item.name}}</h5>
     <div class="card-body">
-      <div class="text-center mycenter px-4 py-2">
+      <div class="text-center mycenter px-4 py-2" style="width: 186px; height: 156px;">
         <img src="{{imagesUrl+item.image}}" width="100%" height="100%" alt="" class="rounded-circle">
       </div>
       <p class="card-text module line-clamp">{{item.info}}</p>
