--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
       <form [formGroup]="loginForm">
         <div class="form-group">
           <label for="exampleInputEmail1">User</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" formControlName="user" >
+          <input type="email" class="form-control" id="exampleInputEmail1" formControlName="name" >
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
