--- a/frontend/src/app/pages/search-users/search-users.component.html
+++ b/frontend/src/app/pages/search-users/search-users.component.html
@@ -28,7 +28,7 @@
     <h5 class="card-title text-center text-uppercase mt-4 mb-0">{{item.name}}</h5>
     <div class="card-body">
       <div class="text-center mycenter px-4 py-2" style="width: 186px; height: 156px;">
-        <img src="{{imagesUrl+item.image}}" width="100%" height="100%" alt="" class="rounded-circle">
+        <img src="{{imagesUrlUsers+item.image}}" width="100%" height="100%" alt="" class="rounded-circle">
       </div>
       <p class="card-text module line-clamp">{{item.info}}</p>
       <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
