--- a/frontend/src/app/helpers/navbar/navbar.component.html
+++ b/frontend/src/app/helpers/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <ng-container *ngIf="login; else elseTemplate">
+  <ng-container *ngIf="user != null; else elseTemplate">
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-md-auto">
         <li class="nav-item">
@@ -17,10 +17,10 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            User name
+            {{user.name}}
           </a>
           <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" [routerLink]="[ '/profile', userid]">Account Settings</a>
+            <a class="dropdown-item" [routerLink]="[ '/profile', user._id]">Account Settings</a>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </li>
