--- a/frontend/src/app/pages/main/main.component.html
+++ b/frontend/src/app/pages/main/main.component.html
@@ -5,7 +5,7 @@
   <div>
     <h1>Most Popular</h1>
     <div class="row pl-4">
-      <div class="col-4 card bg-transparent stroke border border-dark" *ngFor="let item of showdata[pagination.page]; let i=index">
+      <div class="col-4 card bg-transparent stroke border border-dark" *ngFor="let item of showdata; let i=index">
         <img src="{{imagesUrlRecipes+item.picture}}" width="100%" height="100%" alt="" class="rounded card-img">
         <div class="row card-img-overlay text-break text-lowercase font-weight-bold" style="width: 100%;">
           <div class="col-10">
