--- a/frontend/src/app/pages/profile/profile.component.css
+++ b/frontend/src/app/pages/profile/profile.component.css
@@ -41,3 +41,45 @@
 .row.tbody:hover {
   background-color: rgba(250, 250, 250, 0.7);
 }
+
+.image-container{
+  position: relative;
+}
+
+.image{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle{
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  text-align: center;
+}
+
+.image-container:hover .image{
+  opacity: 0.3;
+}
+
+.image-container:hover .middle{
+  opacity: 1;
+}
+
+.image-text{
+  color:white;
+  font-size: 100px;
+}
+
+.mybtn{
+  background-color: transparent;
+  border: none;
+}
