--- a/frontend/src/app/helpers/navbar/navbar.component.html
+++ b/frontend/src/app/helpers/navbar/navbar.component.html
@@ -21,6 +21,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-md-right" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="[ '/profile', user._id]">Account Settings</a>
+            <a class="dropdown-item" [routerLink]="[ '/editprofile', user._id]">Edit Profile</a>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </li>
